--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-gsap": "^1.2.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-scrollmagic": "^2.2.0",
     "styled-components": "^5.0.1"
